--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL Build.loader.js";
+      var loaderUrl = buildUrl + "/WebGL Build 2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL Build.data.br",
-        frameworkUrl: buildUrl + "/WebGL Build.framework.js.br",
-        codeUrl: buildUrl + "/WebGL Build.wasm.br",
+        dataUrl: buildUrl + "/WebGL Build 2.data",
+        frameworkUrl: buildUrl + "/WebGL Build 2.framework.js",
+        codeUrl: buildUrl + "/WebGL Build 2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Samak's",
         productName: "Ben's Rent",
